--- a/Shopthoitrang/dat-hang.html
+++ b/Shopthoitrang/dat-hang.html
@@ -13,9 +13,9 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <h1 class="text-2xl font-bold">DTN Shop</h1>
             <nav class="space-x-4">
-                <a href="/Shopthoitrang/trang-chu.html" class="text-white hover:text-gray-200">Trang chủ</a> |
-                <a href="/Shopthoitrang/dat-hang.html" class="text-white hover:text-gray-200">Sản phẩm</a> |
-                <a href="/Shopthoitrang/gio-hang.html" class="text-white hover:text-gray-200">Giỏ hàng</a> |
+                <a href="/Shopthoitrang/trang-chu.html" class="text-white hover:text-gray-200">Trang chủ</a> 
+                <a href="/Shopthoitrang/dat-hang.html" class="text-white hover:text-gray-200">Sản phẩm</a> 
+                <a href="/Shopthoitrang/gio-hang.html" class="text-white hover:text-gray-200">Giỏ hàng</a> 
             </nav>
             <div class="space-x-4">
                 <div class="relative">
@@ -134,7 +134,7 @@
                 alert(result.message || 'Thêm vào giỏ hàng thất bại');
             } catch (error) {
                 console.error('Lỗi:', error);
-                alert('Có lỗi xảy ra khi thêm vào giỏ hàng');
+                alert('thêm vào giỏ hàng');
             }
         }
 
