--- a/Shopthoitrang/gio-hang.html
+++ b/Shopthoitrang/gio-hang.html
@@ -13,7 +13,6 @@
         <a href="/Shopthoitrang/trang-chu.html">Trang chủ</a>
         <a href="/Shopthoitrang/dat-hang.html">Sản phẩm</a>
         <a href="/Shopthoitrang/gio-hang.html">Giỏ hàng</a>
-        <a href="/Shopthoitrang/lich-su-don-hang.html">Lịch sử đơn hàng</a>
     </nav>
 </header>
 
@@ -109,7 +108,7 @@
                 }
             } catch (error) {
                 console.error('Lỗi khi xóa sản phẩm:', error);
-                alert('Lỗi khi xóa sản phẩm!');
+                alert('xóa sản phẩm!Click "ok" reload');
             }
         }
 
