--- a/Shopthoitrang/admin-danh-muc.html
+++ b/Shopthoitrang/admin-danh-muc.html
@@ -4,95 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý danh mục - Admin</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 15px 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 0 20px;
-        }
-        .add-form, .edit-form {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-        }
-        .add-form input, .edit-form input {
-            width: calc(100% - 16px);
-            padding: 8px;
-            margin: 5px 0;
-            box-sizing: border-box;
-        }
-        .add-form button, .edit-form button {
-            padding: 10px 20px;
-            cursor: pointer;
-            border-radius: 4px;
-            border: none;
-        }
-        .add-form button {
-            background-color: #4CAF50;
-            color: white;
-        }
-        .add-form button:hover {
-            background-color: #45a049;
-        }
-        .edit-form {
-            display: none;
-        }
-        .edit-form .save-btn {
-            background-color: #4CAF50;
-            color: white;
-        }
-        .edit-form .cancel-btn {
-            background-color: #f44336;
-            color: white;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background-color: white;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        th, td {
-            padding: 12px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        th {
-            background-color: #333;
-            color: white;
-        }
-        .edit-btn, .delete-btn {
-            padding: 5px 10px;
-            cursor: pointer;
-            border-radius: 4px;
-            border: none;
-            margin-right: 5px;
-        }
-        .edit-btn {
-            background-color: #4CAF50;
-            color: white;
-        }
-        .delete-btn {
-            background-color: #f44336;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="/Shopthoitrang/css/admin-danh-muc.css">
 </head>
 <body>
     <header>
