--- a/Shopthoitrang/dang-ky.html
+++ b/Shopthoitrang/dang-ky.html
@@ -17,6 +17,7 @@
         .toggle-btn { text-align: center; margin-top: 10px; }
         .toggle-btn a { color: #28a745; text-decoration: none; }
         .toggle-btn a:hover { text-decoration: underline; }
+        .success { color: green; }
     </style>
 </head>
 <body>
@@ -28,7 +29,7 @@
         </div>
         <div class="form-group">
             <label for="register-so-dien-thoai">Số điện thoại:</label>
-            <input type="text" id="register-so-dien-thoai" required>
+            <input type="tel" id="register-so-dien-thoai" required>
         </div>
         <div class="form-group">
             <label for="register-email">Email:</label>
@@ -36,7 +37,7 @@
         </div>
         <div class="form-group">
             <label for="register-dia-chi">Địa chỉ:</label>
-            <input type="text" id="register-dia-chi">
+            <input type="text" id="register-dia_chi">
         </div>
         <button onclick="dangKy()">Đăng ký</button>
         <div class="toggle-btn">
@@ -47,27 +48,38 @@
 
     <script>
         async function dangKy() {
-            const ten = document.getElementById('register-ten').value;
-            const soDienThoai = document.getElementById('register-so-dien-thoai').value;
-            const email = document.getElementById('register-email').value;
-            const diaChi = document.getElementById('register-dia-chi').value;
+            const ten = document.getElementById('register-ten').value.trim();
+            const soDienThoai = document.getElementById('register-so-dien-thoai').value.trim();
+            const email = document.getElementById('register-email').value.trim();
+            const diaChi = document.getElementById('register-dia_chi').value.trim();
+            const messageDiv = document.getElementById('message');
 
             if (!ten || !soDienThoai || !email) {
-                document.getElementById('message').textContent = 'Vui lòng điền đầy đủ thông tin bắt buộc!';
+                messageDiv.textContent = 'Vui lòng điền đủ thông tin bắt buộc!';
                 return;
             }
 
             if (!/^[0-9]{10}$/.test(soDienThoai)) {
-                document.getElementById('message').textContent = 'Số điện thoại phải là 10 chữ số!';
+                messageDiv.textContent = 'Số điện thoại phải là 10 chữ số!';
                 return;
             }
 
             if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)) {
-                document.getElementById('message').textContent = 'Email không hợp lệ!';
+                messageDiv.textContent = 'Email không hợp lệ!';
                 return;
             }
 
-            const khachHang = { ten_khach_hang: ten, so_dien_thoai: soDienThoai, email: email, dia_chi: diaChi };
+            if (!/^[a-zA-ZÀ-ỹ\s]+$/.test(ten)) {
+                messageDiv.textContent = 'Tên chỉ được chứa chữ cái và khoảng trắng!';
+                return;
+            }
+
+            const khachHang = {
+                ten_khach_hang: ten,
+                so_dien_thoai: soDienThoai,
+                email: email,
+                dia_chi: diaChi
+            };
 
             try {
                 const response = await fetch('http://127.0.0.1:5000/khachhang', {
@@ -75,24 +87,39 @@
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(khachHang)
                 });
+
                 const data = await response.json();
+
                 if (response.ok) {
-                    document.getElementById('message').textContent = data.message;
+                    messageDiv.textContent = data.message;
+                    messageDiv.className = 'success';
+
+                    localStorage.setItem('id_khach_hang', data.id_khach_hang);
+
                     document.getElementById('register-ten').value = '';
                     document.getElementById('register-so-dien-thoai').value = '';
                     document.getElementById('register-email').value = '';
-                    document.getElementById('register-dia-chi').value = '';
+                    document.getElementById('register-dia_chi').value = '';
+
                     setTimeout(() => {
-                        window.location.href = '/Shopthoitrang/admin-khachhang.html';
-                    }, 1000);
+                        window.location.href = '/Shopthoitrang/trang-chu.html';
+                    }, 2000);
                 } else {
-                    document.getElementById('message').textContent = data.error;
+                    messageDiv.textContent = data.error || 'Lỗi không xác định từ server.';
                 }
             } catch (error) {
                 console.error('Lỗi API dangKy:', error);
-                document.getElementById('message').textContent = 'Lỗi khi đăng ký!';
+                messageDiv.textContent = 'Lỗi khi kết nối đến server. Vui lòng thử lại!';
             }
         }
+
+        document.querySelectorAll('input').forEach(input => {
+            input.addEventListener('keypress', function(e) {
+                if (e.key === 'Enter') {
+                    dangKy();
+                }
+            });
+        });
     </script>
 </body>
 </html>
