--- a/Shopthoitrang/thanh-toan.html
+++ b/Shopthoitrang/thanh-toan.html
@@ -4,131 +4,197 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DTN Shop - Thanh toán</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/Shopthoitrang/css/gio-hang.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+        }
+        .gio-hang-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        .gio-hang-table th, .gio-hang-table td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+        .gio-hang-table th {
+            background-color: #f2f2f2;
+        }
+        .dat-hang-btn {
+            background-color: #28a745;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .dat-hang-btn:hover {
+            background-color: #218838;
+        }
+        #message {
+            color: red;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 font-sans flex flex-col min-h-screen">
-
-    <!-- Header -->
-    <header class="bg-black text-white">
-        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <h1 class="text-2xl font-bold">DTN Shop - Thanh toán</h1>
-            <div>
-                <a href="/Shopthoitrang/gio-hang.html" class="text-white hover:text-gray-200">Quay lại</a>
-            </div>
-        </div>
+<body>
+    <header>
+        <h1>DTN Shop</h1>
+        <nav>
+            <a href="/Shopthoitrang/trang-chu.html">Trang chủ</a>
+            <a href="/Shopthoitrang/dat-hang.html">Sản phẩm</a>
+            <a href="/Shopthoitrang/gio-hang.html">Giỏ hàng</a>
+        </nav>
     </header>
 
-    <!-- Main Content -->
-    <main class="flex-1 p-6">
-        <h2 class="text-3xl font-bold mb-6">Thông tin thanh toán</h2>
-        <div class="max-w-md mx-auto bg-white shadow-md rounded-lg p-6">
-            <form id="checkoutForm" class="space-y-4">
-                <input type="hidden" id="id_khach_hang" value="">
-                <div>
-                    <label class="block text-sm font-medium text-gray-700">Tên khách hàng</label>
-                    <input type="text" id="ten_khach_hang" class="mt-1 p-2 w-full border rounded" required>
-                </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700">Số tiền</label>
-                    <input type="number" id="tong_tien" class="mt-1 p-2 w-full border rounded" required readonly>
-                </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700">Số điện thoại</label>
-                    <input type="tel" id="so_dien_thoai" class="mt-1 p-2 w-full border rounded" required pattern="[0-9]{10}" placeholder="Nhập số điện thoại (10 số)">
-                </div>
-                <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">Thanh toán khi nhận hàng</button>
-            </form>
-        </div>
-    </main>
+    <section>
+        <h2>Thanh toán</h2>
+        <div id="message"></div>
 
-    <!-- Footer -->
-    <footer class="bg-black text-white py-4">
-        <div class="container mx-auto px-4 text-center">
-            <p>© 2025 DTN Shop. All rights reserved.</p>
+        <!-- Thông tin đơn hàng -->
+        <h3>Thông tin đơn hàng</h3>
+        <table id="cartTable" class="gio-hang-table">
+            <thead>
+                <tr>
+                    <th>Sản phẩm</th>
+                    <th>Số lượng</th>
+                    <th>Đơn giá</th>
+                    <th>Tổng</th>
+                </tr>
+            </thead>
+            <tbody id="cartItems"></tbody>
+        </table>
+        <div id="totalPrice" style="text-align: right; font-weight: bold;">Tổng cộng: 0 VNĐ</div>
+        <div style="text-align: right; margin-top: 20px;">
+            <button id="confirmOrderBtn" class="dat-hang-btn">Xác nhận đặt hàng</button>
         </div>
-    </footer>
+    </section>
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
+        async function loadCheckout() {
             const urlParams = new URLSearchParams(window.location.search);
-            const idKhachHang = urlParams.get('id_khach_hang');
-            if (idKhachHang) {
-                document.getElementById('id_khach_hang').value = idKhachHang;
-                loadCartTotal(idKhachHang);
-            } else {
-                alert('Không tìm thấy ID khách hàng!');
-                window.location.href = '/Shopthoitrang/gio-hang.html';
+            const idKhachHang = urlParams.get('id_khach_hang') || localStorage.getItem('id_khach_hang');
+            
+            if (!idKhachHang) {
+                document.getElementById('message').textContent = 'Vui lòng đăng nhập để thanh toán!';
+                document.getElementById('confirmOrderBtn').style.display = 'none';
+                return;
             }
-        });
 
-        async function loadCartTotal(idKhachHang) {
             try {
-                const response = await fetch(`http://127.0.0.1:5000/giohang?id_khach_hang=${idKhachHang}`, {
-                    method: 'GET',
-                    headers: { 'Content-Type': 'application/json' }
-                });
-                const cartItems = await response.json();
+                const cartResponse = await fetch(`http://127.0.0.1:5000/giohang?id_khach_hang=${idKhachHang}`);
+                const cartItems = await cartResponse.json();
+
+                const cartTable = document.getElementById('cartItems');
+                cartTable.innerHTML = '';
+
+                if (cartItems.length === 0) {
+                    cartTable.innerHTML = '<tr><td colspan="4">Giỏ hàng trống</td></tr>';
+                    document.getElementById('confirmOrderBtn').style.display = 'none';
+                    return;
+                }
+
                 let total = 0;
                 for (const item of cartItems) {
                     const productResponse = await fetch(`http://127.0.0.1:5000/sanpham/${item.id_san_pham}`);
                     const product = await productResponse.json();
-                    total += item.so_luong * (product.gia || 0);
+                    const row = document.createElement('tr');
+                    const totalPrice = item.so_luong * (product.gia || 0);
+                    row.innerHTML = `
+                        <td>${product.ten_san_pham || item.id_san_pham}</td>
+                        <td>${item.so_luong}</td>
+                        <td>${(product.gia || 0).toLocaleString('vi-VN')} VNĐ</td>
+                        <td>${totalPrice.toLocaleString('vi-VN')} VNĐ</td>
+                    `;
+                    cartTable.appendChild(row);
+                    total += totalPrice;
                 }
-                document.getElementById('tong_tien').value = total;
+
+                document.getElementById('totalPrice').textContent = `Tổng cộng: ${total.toLocaleString('vi-VN')} VNĐ`;
+                localStorage.setItem('tong_tien', total);
+
             } catch (error) {
-                console.error('Lỗi khi tải tổng tiền:', error);
-                alert('Lỗi khi tải thông tin giỏ hàng!');
+                console.error('Lỗi khi tải thông tin thanh toán:', error);
+                document.getElementById('message').textContent = 'Lỗi khi tải thông tin thanh toán!';
             }
         }
 
-        document.getElementById('checkoutForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const idKhachHang = document.getElementById('id_khach_hang').value;
-            const tenKhachHang = document.getElementById('ten_khach_hang').value;
-            const tongTien = document.getElementById('tong_tien').value;
-            const soDienThoai = document.getElementById('so_dien_thoai').value;
+        document.getElementById('confirmOrderBtn').addEventListener('click', async () => {
+            const idKhachHang = localStorage.getItem('id_khach_hang');
+            const tongTien = localStorage.getItem('tong_tien');
 
-            if (!tenKhachHang || !tongTien || !soDienThoai) {
-                alert('Vui lòng điền đầy đủ thông tin!');
-                return;
-            }
-
-            // Kiểm tra định dạng số điện thoại (10 số)
-            if (!/^[0-9]{10}$/.test(soDienThoai)) {
-                alert('Số điện thoại phải là 10 chữ số!');
+            if (!idKhachHang || !tongTien) {
+                alert('Thông tin không hợp lệ, vui lòng thử lại!');
                 return;
             }
 
             try {
+                const orderData = {
+                    id_khach_hang: parseInt(idKhachHang),
+                    tong_tien: parseFloat(tongTien),
+                    trang_thai: 'Chờ xử lý',
+                    ngay_dat: new Date().toISOString()
+                };
+
                 const response = await fetch('http://127.0.0.1:5000/donhang', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        id_khach_hang: idKhachHang,
-                        tong_tien: parseFloat(tongTien),
-                        so_dien_thoai: soDienThoai,
-                        ten_khach_hang: tenKhachHang,
-                        trang_thai: 'Chờ xử lý',
-                        ngay_dat: new Date().toISOString()
-                    })
+                    body: JSON.stringify(orderData)
                 });
-                const data = await response.json();
+
+                const result = await response.json();
                 if (response.ok) {
-                    alert(data.message || 'Đơn hàng đã được tạo!');
-                    // Xóa giỏ hàng sau khi đặt thành công
-                    await fetch(`http://127.0.0.1:5000/giohang?id_khach_hang=${idKhachHang}`, {
-                        method: 'DELETE'
-                    });
-                    // Chuyển hướng đến admin-lichsudonhang.html để hiển thị đơn hàng mới
-                    window.location.href = '/Shopthoitrang/admin-lichsudonhang.html';
+    alert('Đặt hàng thành công! Đơn hàng của bạn đang được xử lý.');
+                    try {
+                        const deleteResponse = await fetch(`http://127.0.0.1:5000/giohang/${idKhachHang}`, {
+                            method: 'DELETE',
+                            headers: { 'Content-Type': 'application/json' }
+                        });
+                        if (!deleteResponse.ok) {
+                            console.warn('Xóa giỏ hàng thất bại, nhưng vẫn chuyển hướng:', await deleteResponse.json());
+                        }
+                    } catch (deleteError) {
+                        console.warn('Lỗi khi xóa giỏ hàng:', deleteError);
+                    }
+                    console.log('Chuyển hướng đến:', '/Shopthoitrang/cam-on.html');
+                    localStorage.removeItem('tong_tien');
+                    window.location.href = '/Shopthoitrang/cam-on.html';
                 } else {
-                    alert(data.error || 'Lỗi khi đặt hàng!');
+                    alert(result.error || 'Lỗi khi đặt hàng!');
                 }
             } catch (error) {
                 console.error('Lỗi khi đặt hàng:', error);
-                alert('Lỗi khi gửi đơn hàng!');
+                alert('Lỗi khi đặt hàng! Vui lòng thử lại.');
             }
         });
+
+        window.onload = loadCheckout;
     </script>
 </body>
-</html>
+</html> 
